// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeveloperEditionModal should match snapshot when not visible 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <DeveloperEditionModal
    setSubscribingState={[MockFunction]}
    visible={false}
  >
    <Modal
      afterClose={[Function]}
      renderChildren={true}
      visible={false}
    />
  </DeveloperEditionModal>
</Provider>
`;

exports[`DeveloperEditionModal should match snapshot when visible 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <DeveloperEditionModal
    setSubscribingState={[MockFunction]}
    visible={true}
  >
    <Modal
      afterClose={[Function]}
      renderChildren={true}
      visible={true}
    />
  </DeveloperEditionModal>
</Provider>
`;
